--- a/.github/workflows/aliyun.yml
+++ b/.github/workflows/aliyun.yml
@@ -55,7 +55,7 @@ jobs:
         uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
         with:
           images: |
-            registry.cn-hangzhou.aliyuncs.com/au-cr/xiaozhi
+            registry.cn-shanghai.aliyuncs.com/au-cr/xiaozhi
           tags: |
             type=ref,event=tag
 
