feat: add push true

--- a/.github/workflows/aliyun.yml
+++ b/.github/workflows/aliyun.yml
@@ -65,6 +65,7 @@ jobs:
         id: build-and-push
         uses: docker/build-push-action@v5
         with:
+          push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
