--- a/.github/workflows/aliyun.yml
+++ b/.github/workflows/aliyun.yml
@@ -57,7 +57,9 @@ jobs:
           images: |
             registry.cn-shanghai.aliyuncs.com/au-cr/xiaozhi
           tags: |
+            type=ref,event=branch
             type=ref,event=tag
+            type=ref,event=pr
 
       # Build and push Docker image with Buildx (don't push on PR)
       # https://github.com/docker/build-push-action
