--- a/.github/workflows/aliyun.yml
+++ b/.github/workflows/aliyun.yml
@@ -40,11 +40,11 @@ jobs:
 
       # Login against a Docker registry except on PR
       # https://github.com/docker/login-action
-      - name: Log into registry registry.cn-hangzhou.aliyuncs.com
+      - name: Log into registry registry.cn-shanghai.aliyuncs.com
         if: github.event_name != 'pull_request'
         uses: docker/login-action@v3
         with:
-          registry: registry.cn-hangzhou.aliyuncs.com
+          registry: registry.cn-shanghai.aliyuncs.com
           username: ${{ secrets.ALIYUNCRUSER }}
           password: ${{ secrets.ALIYUNCRPWD }}
 
